@@ -1,3 +1,5 @@
+28 Jun 2006 Fix doubled/duplicated startup 'version' logmsgs caused by
+            PR# misc/87 when Herc is run in daemon/hercgui mode  - Fish
 25 Jun 2006 Fix seq dasdload blksize pad bug - Peter Sylvester
             [peter.sylvester@edelweb.fr] by Fish
 23 Jun 2006 PR#s misc/21 and network/62: HTTP Server: do 'shutdown' to
